--- a/links/about.html
+++ b/links/about.html
@@ -37,6 +37,11 @@ li{
   font-family: 'Varela Round', sans-serif;
   font-weight: bolder;
 }
+#tab-link{
+  font-family: 'Varela Round', sans-serif;
+  font-weight: bolder;
+  font-size: 20px;
+}
 @keyframes example {
   0%   {background-color: lightblue; width: 2.5%;}
   5%  {background-color: lightblue; width: 5%;}
@@ -335,13 +340,13 @@ a.nav-link:hover .mbar{
                     <div class="info-con">
                       <ul class="nav nav-pills float-md-right" role="tablist">
                         <li class="nav-item">
-                          <a class="nav-link active" data-toggle="pill" href="#life">Life</a>
+                          <a class="nav-link active" data-toggle="pill" href="#life" id="tab-link">Life</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" data-toggle="pill" href="#education">Education</a>
+                          <a class="nav-link" data-toggle="pill" href="#education" id="tab-link">Education</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" data-toggle="pill" href="#experience">Experience</a>
+                          <a class="nav-link" data-toggle="pill" href="#experience" id="tab-link">Experience</a>
                         </li>
                       </ul>
                       <div class="tab-content">
