Fixing in the colors

--- a/links/about.html
+++ b/links/about.html
@@ -41,6 +41,13 @@ li{
   font-family: 'Varela Round', sans-serif;
   font-weight: bolder;
   font-size: 20px;
+  color: #0b8de3;
+}
+#infotext{
+  font-family: 'Varela Round', sans-serif;
+}
+.abholder{
+  color: #0b8de3;
 }
 @keyframes example {
   0%   {background-color: lightblue; width: 2.5%;}
@@ -351,13 +358,13 @@ a.nav-link:hover .mbar{
                       </ul>
                       <div class="tab-content">
                         <div id="life" class="container tab-pane active"><br><br><br>
-                          <p class="w-75 float-md-right pl-md-5 ml-md-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                          <p class="w-75 float-md-right pl-md-5 ml-md-2 text-primary font-weight-bold" id="infotext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                         <div id="education" class="container tab-pane fade"><br><br><br>
-                          <p class="w-75 float-md-right pl-md-5 ml-md-2">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                          <p class="w-75 float-md-right pl-md-5 ml-md-2 text-primary font-weight-bold" id="infotext">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
                         <div id="experience" class="container tab-pane fade"><br><br><br>
-                          <p class="w-75 float-md-right pl-md-5 ml-md-2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                          <p class="w-75 float-md-right pl-md-5 ml-md-2 text-primary font-weight-bold" id="infotext">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
                         </div>
                       </div>
                     </div>
