--- a/links/about.html
+++ b/links/about.html
@@ -41,7 +41,6 @@ li{
   font-family: 'Varela Round', sans-serif;
   font-weight: bolder;
   font-size: 20px;
-  color: #0b8de3;
 }
 #infotext{
   font-family: 'Varela Round', sans-serif;
@@ -279,8 +278,6 @@ a.nav-link:hover .mbar{
     right: 240px;
 }
 .info-con{
-  border-style: solid;
-  border-width: 2px;
   width: 99%;
   height: 250px;
   position: relative;
@@ -333,7 +330,7 @@ a.nav-link:hover .mbar{
             <div class="container-fluid">
               <div class="shape">
               <div class="row">
-                  <div class="col-md-12 border">
+                  <div class="col-md-12">
                     <div class="abtext">
                       <div class="abholder">
                         <span class="obj1" id="insta1">/</span><span class="obj1" id="insta2">/</span><span class="obj1" id="insta3">A</span><span id="insta4"class="obj1">B</span><span id="insta5" class="obj1">O</span><span id="insta6" class="obj1">U</span><span id="insta7" class="obj1">T</span><span id="insta8" class="obj1">M</span><span id="insta9" class="obj1">E</span>
@@ -347,24 +344,24 @@ a.nav-link:hover .mbar{
                     <div class="info-con">
                       <ul class="nav nav-pills float-md-right" role="tablist">
                         <li class="nav-item">
-                          <a class="nav-link active" data-toggle="pill" href="#life" id="tab-link">Life</a>
+                          <a class="nav-link active" data-toggle="pill" href="#life">Life</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" data-toggle="pill" href="#education" id="tab-link">Education</a>
+                          <a class="nav-link" data-toggle="pill" href="#education">Education</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" data-toggle="pill" href="#experience" id="tab-link">Experience</a>
+                          <a class="nav-link" data-toggle="pill" href="#experience">Experience</a>
                         </li>
                       </ul>
                       <div class="tab-content">
                         <div id="life" class="container tab-pane active"><br><br><br>
-                          <p class="w-75 float-md-right pl-md-5 ml-md-2 text-primary font-weight-bold" id="infotext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                          <p class="w-75 float-md-right pl-md-5 ml-md-2 font-weight-bold" id="infotext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                         <div id="education" class="container tab-pane fade"><br><br><br>
-                          <p class="w-75 float-md-right pl-md-5 ml-md-2 text-primary font-weight-bold" id="infotext">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                          <p class="w-75 float-md-right pl-md-5 ml-md-2 font-weight-bold" id="infotext">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
                         <div id="experience" class="container tab-pane fade"><br><br><br>
-                          <p class="w-75 float-md-right pl-md-5 ml-md-2 text-primary font-weight-bold" id="infotext">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                          <p class="w-75 float-md-right pl-md-5 ml-md-2 font-weight-bold" id="infotext">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
                         </div>
                       </div>
                     </div>
