--- a/links/about.html
+++ b/links/about.html
@@ -344,13 +344,13 @@ a.nav-link:hover .mbar{
                     <div class="info-con">
                       <ul class="nav nav-pills float-md-right" role="tablist">
                         <li class="nav-item">
-                          <a class="nav-link active" data-toggle="pill" href="#life">Life</a>
+                          <a class="nav-link active" data-toggle="pill" href="#life" id="infotext">Life</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" data-toggle="pill" href="#education">Education</a>
+                          <a class="nav-link" data-toggle="pill" href="#education" id="infotext">Education</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" data-toggle="pill" href="#experience">Experience</a>
+                          <a class="nav-link" data-toggle="pill" href="#experience" id="infotext">Experience</a>
                         </li>
                       </ul>
                       <div class="tab-content">
