--- a/links/about.html
+++ b/links/about.html
@@ -37,13 +37,10 @@ li{
   font-family: 'Varela Round', sans-serif;
   font-weight: bolder;
 }
-#tab-link{
+#infotext{
   font-family: 'Varela Round', sans-serif;
   font-weight: bolder;
   font-size: 20px;
-}
-#infotext{
-  font-family: 'Varela Round', sans-serif;
 }
 .abholder{
   color: #0b8de3;
@@ -355,13 +352,13 @@ a.nav-link:hover .mbar{
                       </ul>
                       <div class="tab-content">
                         <div id="life" class="container tab-pane active"><br><br><br>
-                          <p class="w-75 float-md-right pl-md-5 ml-md-2 font-weight-bold" id="infotext">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                          <p class="w-75 float-md-right pl-md-5 ml-md-2 font-weight-bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                         <div id="education" class="container tab-pane fade"><br><br><br>
-                          <p class="w-75 float-md-right pl-md-5 ml-md-2 font-weight-bold" id="infotext">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                          <p class="w-75 float-md-right pl-md-5 ml-md-2 font-weight-bold">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
                         <div id="experience" class="container tab-pane fade"><br><br><br>
-                          <p class="w-75 float-md-right pl-md-5 ml-md-2 font-weight-bold" id="infotext">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                          <p class="w-75 float-md-right pl-md-5 ml-md-2 font-weight-bold">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
                         </div>
                       </div>
                     </div>
