--- a/links/about.html
+++ b/links/about.html
@@ -41,9 +41,11 @@ li{
   font-family: 'Varela Round', sans-serif;
   font-weight: bolder;
   font-size: 20px;
+  color: white;
 }
 #txtlink{
   font-family: 'Varela Round', sans-serif;
+  color: white;
 }
 .abholder{
   color: #0b8de3;
@@ -287,8 +289,7 @@ a.nav-link:hover .mbar{
       width: 60%;
       margin: auto;
       height: 300px;
-      border-style: solid;
-      border-width: 1px;
+      border-radius: 10px;
       background-color: #ffd662ff;
     }
 }
@@ -340,7 +341,7 @@ a.nav-link:hover .mbar{
                   </div>
               </div>
               <div class="row">
-                <div class="col-md-12 border p-0">
+                <div class="col-md-12 p-0">
                   <div class="infop">
                     <div class="info-con">
                       <ul class="nav nav-pills float-md-right" role="tablist">
