--- a/links/about.html
+++ b/links/about.html
@@ -41,11 +41,9 @@ li{
   font-family: 'Varela Round', sans-serif;
   font-weight: bolder;
   font-size: 20px;
-  color: white;
 }
 #txtlink{
   font-family: 'Varela Round', sans-serif;
-  color: white;
 }
 .abholder{
   color: #0b8de3;
@@ -290,6 +288,7 @@ a.nav-link:hover .mbar{
       margin: auto;
       height: 300px;
       border-radius: 10px;
+      border-color:#ffd662ff ;
       background-color: #ffd662ff;
     }
 }
