--- a/links/about.html
+++ b/links/about.html
@@ -47,7 +47,7 @@ li{
 }
 .abholder{
   color: #0b8de3;
-  text-shadow: -15px 5px 20px #ced0d3;
+  text-shadow: -15px 5px 20px black;
 }
 @keyframes example {
   0%   {background-color: lightblue; width: 2.5%;}
