--- a/links/about.html
+++ b/links/about.html
@@ -219,6 +219,12 @@ a.nav-link:hover .mbar{
     bottom: 120px;
     right: 195px;
 }
+.info-con{
+  width: 99%;
+  height: 250px;
+  position: relative;
+  bottom: 280px;
+}
 .infop{
       width: 60%;
       margin: auto;
