--- a/links/about.html
+++ b/links/about.html
@@ -222,6 +222,8 @@ a.nav-link:hover .mbar{
 .info-con{
   width: 99%;
   height: 250px;
+  border-style: solid;
+  border-width: 1px;
   position: relative;
   bottom: 280px;
 }
