--- a/links/about.html
+++ b/links/about.html
@@ -222,8 +222,6 @@ a.nav-link:hover .mbar{
 .info-con{
   width: 99%;
   height: 250px;
-  border-style: solid;
-  border-width: 1px;
   position: relative;
   bottom: 240px;
 }
@@ -231,8 +229,10 @@ a.nav-link:hover .mbar{
       width: 60%;
       margin: auto;
       height: 200px;
-      border-style: solid;
-      border-width: 1px;
+      border-radius: 10px;
+      border-color:#ffd662ff ;
+      background-color: #ffd662ff;
+      box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
     }
   }
     @media only screen and (min-width: 1200px){
