--- a/links/about.html
+++ b/links/about.html
@@ -40,7 +40,6 @@ li{
 #infotext{
   font-family: 'Varela Round', sans-serif;
   font-weight: bolder;
-  font-size: 20px;
 }
 #txtlink{
   font-family: 'Varela Round', sans-serif;
@@ -225,6 +224,12 @@ a.nav-link:hover .mbar{
   position: relative;
   bottom: 240px;
 }
+#infotext{
+  font-size: 18px;
+}
+#txtlink{
+  font-size: 14px ;
+}
 .infop{
       width: 60%;
       margin: auto;
@@ -300,6 +305,12 @@ a.nav-link:hover .mbar{
       background-color: #ffd662ff;
       box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
     }
+#infotext{
+  font-size: 20px;
+}
+#txtlink{
+  font-size: 16px ;
+}
 }
     </style>
     </head>
