--- a/links/about.html
+++ b/links/about.html
@@ -160,12 +160,28 @@ a.nav-link:hover .mbar{
     bottom: 95px;
     right: 145px;
 }
+.info-con{
+  width: 99%;
+  height: 250px;
+  position: relative;
+  bottom: 200px;
+  border-width: 1px;
+  border-style: solid;
+}
+#infotext{
+  font-size: 16px;
+}
+#txtlink{
+  font-size: 12px ;
+}
 .infop{
       width: 60%;
       margin: auto;
       height: 200px;
-      border-style: solid;
-      border-width: 1px;
+      border-radius: 10px;
+      border-color:#ffd662ff ;
+      background-color: #ffd662ff;
+      box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
     }
   }
   @media only screen and (min-width: 992px){
