--- a/links/about.html
+++ b/links/about.html
@@ -149,6 +149,9 @@ a.nav-link:hover .mbar{
     #insta9{
       font-size: 34px;
     }
+    .abholder{
+      margin-bottom: 16px;
+    }
     .infop::before{
     display:inline-block;
     height: 190px;
@@ -162,7 +165,7 @@ a.nav-link:hover .mbar{
 }
 .info-con{
   width: 99%;
-  height: 250px;
+  height: 200px;
   position: relative;
   bottom: 200px;
   border-width: 1px;
