--- a/links/about.html
+++ b/links/about.html
@@ -405,6 +405,9 @@ a.nav-link:hover .mbar{
                     </div>
                   </div>
                   </div>
+                  <div>
+                    Kofi is a black guy 
+                  </div>
                 </div>
               </div>
             </div>
