--- a/links/about.html
+++ b/links/about.html
@@ -393,10 +393,10 @@ a.nav-link:hover .mbar{
                       </ul>
                       <div class="tab-content">
                         <div id="life" class="container tab-pane active"><br><br><br>
-                          <p class="w-75 float-md-right pl-md-5 ml-md-2 font-weight-bold" id="txtlink">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                          <p class="w-75 float-md-right pl-md-5 ml-md-2 font-weight-bold" id="txtlink">Based in Western part of Africa, Ghana. A country filled with lots of goal-driven youth. I am motivated by<br>the thought of solving or apprehending the most challenging of problems and break them down into<br>easy readable and understandable syntax.<br><br>With all that said , I tend to make every code I write efficient , effective and reusable whether it being<br>REACT,Node.js, Next.js or Python. But I guess when I am not behind the machine, you may find me<br>talking a walk or playing football.</p>
                         </div>
                         <div id="education" class="container tab-pane fade"><br><br><br>
-                          <p class="w-75 float-md-right pl-md-5 ml-md-2 font-weight-bold" id="txtlink">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                          <p class="w-75 float-md-right pl-md-5 ml-md-2 font-weight-bold" id="txtlink">Been self-taught mostly in this S.T.E.M field. I obtained my basic education certification in the year<br>2015.In 2018, I completed high and earned my senior high certificate. Continued to the Tertiary stage <br>and now pursuing a degree in the Bachelor of Arts &mdashInformation Studies and Psychology.</p>
                         </div>
                         <div id="experience" class="container tab-pane fade"><br><br><br>
                           <p class="w-75 float-md-right pl-md-5 ml-md-2 font-weight-bold" id="txtlink">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
@@ -405,7 +405,7 @@ a.nav-link:hover .mbar{
                     </div>
                   </div>
                   </div>
-                  <div>
+                  <div class="col-sm-12">
                     Kofi is a black guy 
                   </div>
                 </div>
