--- a/links/about.html
+++ b/links/about.html
@@ -405,8 +405,16 @@ a.nav-link:hover .mbar{
                     </div>
                   </div>
                   </div>
-                  <div class="col-sm-12">
-                    Kofi is a black guy 
+                  </div>
+                  <div class="row d-none d-sm-block d-md-none">
+                    <div class="col-sm-12">
+                      IMAGE WOULD BE HERE
+                    </div>
+                  </div>
+                  <div class="row d-none d-sm-block d-md-none">
+                    <div class="col-sm-12">
+                      ACCORDIAN WOULD BE HERE
+                    </div>
                   </div>
                 </div>
               </div>
