--- a/links/about.html
+++ b/links/about.html
@@ -406,12 +406,12 @@ a.nav-link:hover .mbar{
                   </div>
                   </div>
                   </div>
-                  <div class="row d-none d-sm-block d-md-none">
+                  <div class="row">
                     <div class="col-sm-12">
                       IMAGE WOULD BE HERE
                     </div>
                   </div>
-                  <div class="row d-none d-sm-block d-md-none">
+                  <div class="row">
                     <div class="col-sm-12">
                       ACCORDIAN WOULD BE HERE
                     </div>
