--- a/links/about.html
+++ b/links/about.html
@@ -407,12 +407,12 @@ a.nav-link:hover .mbar{
                   </div>
                   </div>
                   <div class="row">
-                    <div class="col-sm-12 d-none d-sm-block d-md-none">
+                    <div class="col-sm-12 d-md-none">
                       IMAGE WOULD BE HERE
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-sm-12 d-none d-sm-block d-md-none">
+                    <div class="col-sm-12 d-md-none">
                       ACCORDIAN WOULD BE HERE
                     </div>
                   </div>
