--- a/links/about.html
+++ b/links/about.html
@@ -377,7 +377,7 @@ a.nav-link:hover .mbar{
                   </div>
               </div>
               <div class="row">
-                <div class="col-md-12 p-0 d-none d-md-block h-auto">
+                <div class="col-md-12 p-0 d-none d-md-block h-50">
                   <div class="infop">
                     <div class="info-con">
                       <ul class="nav nav-pills float-md-right" role="tablist">
