--- a/links/about.html
+++ b/links/about.html
@@ -258,6 +258,9 @@ a.nav-link:hover .mbar{
     }
   }
     @media only screen and (min-width: 1200px){
+      #boxy{
+        height: 400px;
+      }
       .shape{
       width: 1160px;
       margin: auto;
@@ -377,7 +380,7 @@ a.nav-link:hover .mbar{
                   </div>
               </div>
               <div class="row">
-                <div class="col-md-12 p-0 d-none d-md-block h-50">
+                <div class="col-md-12 p-0 d-none d-md-block" id="boxy">
                   <div class="infop">
                     <div class="info-con">
                       <ul class="nav nav-pills float-md-right" role="tablist">
