--- a/links/about.html
+++ b/links/about.html
@@ -186,6 +186,9 @@ a.nav-link:hover .mbar{
     }
   }
   @media only screen and (min-width: 992px){
+    #boxy{
+        height: 300px;
+      }
     .shape{
       width: 952px;
       margin: auto;
