--- a/links/about.html
+++ b/links/about.html
@@ -112,6 +112,9 @@ a.nav-link:hover .mbar{
       }
     }
     @media only screen and (min-width: 768px){
+      #boxy{
+        height: 320px;
+      }
       .shape{
       width: 728px;
       margin: auto;
@@ -187,7 +190,7 @@ a.nav-link:hover .mbar{
   }
   @media only screen and (min-width: 992px){
     #boxy{
-        height: 360px;
+        height: 340px;
       }
     .shape{
       width: 952px;
