--- a/links/about.html
+++ b/links/about.html
@@ -424,7 +424,7 @@ a.nav-link:hover .mbar{
                     <div class="col-sm-12 d-md-none">
                       <div id="accordion">
                         <div class="card rounded-top">
-                          <div class="card-header border-0">
+                          <div class="card-header border-bottom-0">
                             <a class="card-link" data-toggle="collapse" href="#collapseOne">
                               Collapsible Group Item #1
                             </a>
@@ -436,7 +436,7 @@ a.nav-link:hover .mbar{
                           </div>
                         </div>
                         <div class="card">
-                          <div class="card-header border-0">
+                          <div class="card-header border-bottom-0">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
                             Collapsible Group Item #2
                           </a>
@@ -448,7 +448,7 @@ a.nav-link:hover .mbar{
                           </div>
                         </div>
                         <div class="card rounded-bottom">
-                          <div class="card-header border-0">
+                          <div class="card-header border-bottom-0">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
                               Collapsible Group Item #3
                             </a>
