--- a/links/about.html
+++ b/links/about.html
@@ -447,7 +447,7 @@ a.nav-link:hover .mbar{
                             </div>
                           </div>
                         </div>
-                        <div class="card rounded-bottom">
+                        <div class="card rounded-bottom rounded-top-0">
                           <div class="card-header border-bottom-0">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
                               Collapsible Group Item #3
