--- a/links/about.html
+++ b/links/about.html
@@ -423,7 +423,7 @@ a.nav-link:hover .mbar{
                   <div class="row">
                     <div class="col-sm-12 d-md-none">
                       <div id="accordion">
-                        <div class="card rounded-top">
+                        <div class="card border-0">
                           <div class="card-header border-bottom-0">
                             <a class="card-link" data-toggle="collapse" href="#collapseOne">
                               Collapsible Group Item #1
@@ -435,7 +435,7 @@ a.nav-link:hover .mbar{
                             </div>
                           </div>
                         </div>
-                        <div class="card">
+                        <div class="card border-0">
                           <div class="card-header border-bottom-0">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
                             Collapsible Group Item #2
@@ -447,7 +447,7 @@ a.nav-link:hover .mbar{
                             </div>
                           </div>
                         </div>
-                        <div class="card rounded-bottom rounded-top-0">
+                        <div class="card border-0">
                           <div class="card-header border-bottom-0">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
                               Collapsible Group Item #3
