--- a/links/about.html
+++ b/links/about.html
@@ -423,7 +423,7 @@ a.nav-link:hover .mbar{
                   <div class="row">
                     <div class="col-sm-12 d-md-none">
                       <div id="accordion">
-                        <div class="card border-0">
+                        <div class="card border-0 border-top border-left border-right">
                           <div class="card-header border-bottom-0">
                             <a class="card-link" data-toggle="collapse" href="#collapseOne">
                               Collapsible Group Item #1
