--- a/links/about.html
+++ b/links/about.html
@@ -435,7 +435,7 @@ a.nav-link:hover .mbar{
                             </div>
                           </div>
                         </div>
-                        <div class="card border-0">
+                        <div class="card">
                           <div class="card-header border-bottom-0">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
                             Collapsible Group Item #2
@@ -447,7 +447,7 @@ a.nav-link:hover .mbar{
                             </div>
                           </div>
                         </div>
-                        <div class="card border-0">
+                        <div class="card">
                           <div class="card-header border-bottom-0">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
                               Collapsible Group Item #3
