--- a/links/about.html
+++ b/links/about.html
@@ -422,7 +422,7 @@ a.nav-link:hover .mbar{
                   </div>
                   <div class="row">
                     <div class="col-sm-12 d-md-none">
-                      <div id="accordion">
+                      <div id="accordion" class="bg-warning">
                         <div class="card">
                           <div class="card-header border-bottom-0">
                             <a class="card-link" data-toggle="collapse" href="#collapseOne">
