--- a/links/about.html
+++ b/links/about.html
@@ -417,7 +417,7 @@ a.nav-link:hover .mbar{
                   </div>
                   <div class="row">
                     <div class="col-sm-12 d-md-none">
-                      IMAGE WOULD BE HERE
+                      <img src="../images/falsesm.png" class="img-fluid" alt="false image" width="460px" height="180px">
                     </div>
                   </div>
                   <div class="row">
