--- a/links/about.html
+++ b/links/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Kwaku Asare</title>
         <link rel="apple-touch-icon" sizes="180x180" href="../images/webicon/apple-touch-icon.png">
@@ -105,7 +105,7 @@ a.nav-link:hover .mbar{
      z-index: 2;
      position: relative;
     }
-    @media only screen and (min-width: 600px){
+    @media only screen and (min-width: 300px){
       .shape{
         width: 560px;
         margin: auto;
@@ -417,7 +417,7 @@ a.nav-link:hover .mbar{
                   </div>
                   <div class="row">
                     <div class="col-sm-12 d-md-none">
-                      <img src="../images/falsesm.png" class="img-fluid" alt="false image" width="600px" height="180px">
+                      <img src="../images/falsesm.png" alt="false image">
                     </div>
                   </div>
                   <div class="row">
