--- a/links/about.html
+++ b/links/about.html
@@ -105,10 +105,14 @@ a.nav-link:hover .mbar{
      z-index: 2;
      position: relative;
     }
-    @media only screen and (min-width: 300px){
+    @media only screen and (min-width: 600px){
       .shape{
         width: 560px;
         margin: auto;
+      }
+      #imagesm{
+        width: 600px;
+        height: 200px;
       }
     }
     @media only screen and (min-width: 768px){
@@ -417,7 +421,7 @@ a.nav-link:hover .mbar{
                   </div>
                   <div class="row">
                     <div class="col-sm-12 d-md-none">
-                      <img src="../images/falsesm.png" alt="false image">
+                      <img src="../images/falsesm.png" alt="false image" id="imagesm">
                     </div>
                   </div>
                   <div class="row">
