--- a/links/about.html
+++ b/links/about.html
@@ -113,6 +113,7 @@ a.nav-link:hover .mbar{
       #imagesm{
         width: 600px;
         height: 200px;
+        position: relative;
       }
     }
     @media only screen and (min-width: 768px){
