--- a/links/about.html
+++ b/links/about.html
@@ -114,6 +114,7 @@ a.nav-link:hover .mbar{
         width: 600px;
         height: 200px;
         position: relative;
+        display: block;
       }
     }
     @media only screen and (min-width: 768px){
