--- a/links/about.html
+++ b/links/about.html
@@ -113,6 +113,9 @@ a.nav-link:hover .mbar{
       #imagesm{
         width: 500px;
         height: 400px;
+        display: block;
+        margin-top: 10px;
+        margin-bottom: 10px;
       }
     }
     @media only screen and (min-width: 768px){
