--- a/links/about.html
+++ b/links/about.html
@@ -110,12 +110,14 @@ a.nav-link:hover .mbar{
         width: 560px;
         margin: auto;
       }
+      .abholder{
+        margin: auto;
+      }
       #imagesm{
         width: 500px;
         height: 400px;
         display: block;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin: auto;
       }
     }
     @media only screen and (min-width: 768px){
