--- a/links/about.html
+++ b/links/about.html
@@ -426,7 +426,7 @@ a.nav-link:hover .mbar{
                   </div>
                   <div class="row">
                     <div class="col-sm-12 d-md-none">
-                      <img src="../images/falsesm.png" alt="false image" id="imagesm">
+                      <img src="../images/falsesm.png" alt="false image" id="imagesm" class="img-fluid">
                     </div>
                   </div>
                   <div class="row">
