--- a/links/about.html
+++ b/links/about.html
@@ -105,12 +105,13 @@ a.nav-link:hover .mbar{
      z-index: 2;
      position: relative;
     }
-    @media only screen and (min-width: 600px){
+    @media only screen and (min-width: 767px){
       .shape{
         width: 560px;
         margin: auto;
       }
       .abholder{
+        width: 500px;
         margin: auto;
       }
       #imagesm{
