--- a/links/about.html
+++ b/links/about.html
@@ -113,6 +113,7 @@ a.nav-link:hover .mbar{
       .abholder{
         width: 500px;
         margin: auto;
+        text-align: center;
       }
       #imagesm{
         width: 500px;
