--- a/links/about.html
+++ b/links/about.html
@@ -110,12 +110,6 @@ a.nav-link:hover .mbar{
         width: 560px;
         margin: auto;
       }
-      #imagesm{
-        width: 500px;
-        height: 400px;
-        display: block;
-        margin: auto;
-      }
     }
     @media only screen and (min-width: 768px){
       #boxy{
@@ -423,7 +417,7 @@ a.nav-link:hover .mbar{
                   </div>
                   <div class="row">
                     <div class="col-sm-12 d-md-none">
-                      <img src="../images/falsesm.png" alt="false image" id="imagesm" class="img-fluid">
+                      <img src="../images/falsesm.png" alt="false image" id="imagesm" class="img-fluid mx-auto d-block" width="500px" height="400px">
                     </div>
                   </div>
                   <div class="row">
