--- a/links/about.html
+++ b/links/about.html
@@ -105,15 +105,14 @@ a.nav-link:hover .mbar{
      z-index: 2;
      position: relative;
     }
-    @media only screen and (min-width: 600px){
+    @media only screen and (min-width: 400px){
       .shape{
         width: 560px;
         margin: auto;
       }
       #imagesm{
-        width: 500px;
-        height: 400px;
         display: block;
+        margin: auto;
       }
     }
     @media only screen and (min-width: 768px){
@@ -422,7 +421,7 @@ a.nav-link:hover .mbar{
                   </div>
                   <div class="row">
                     <div class="col-sm-12 d-md-none">
-                      <img src="../images/falsesm.png" alt="false image" id="imagesm">
+                      <img src="../images/falsesm.png" alt="false image" class="img-fluid" id="imagesm" width="300px" height="300px">
                     </div>
                   </div>
                   <div class="row">
