--- a/links/about.html
+++ b/links/about.html
@@ -425,7 +425,7 @@ a.nav-link:hover .mbar{
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-12 d-md-none">
+                    <div class="col-12 d-md-none mw-100">
                       <div id="accordion">
                         <div class="card">
                           <div class="card-header">
