--- a/links/about.html
+++ b/links/about.html
@@ -420,12 +420,12 @@ a.nav-link:hover .mbar{
                   </div>
                   </div>
                   <div class="row">
-                    <div class="col-12 d-md-none">
+                    <div class="col-md-12 d-md-none">
                       <img src="../images/falsesm.png" alt="false image" class="img-fluid" id="imagesm" width="460px" height="300px">
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-12 d-md-none mw-100">
+                    <div class="col-md-12 d-md-none">
                       <div id="accordion">
                         <div class="card">
                           <div class="card-header">
