--- a/links/about.html
+++ b/links/about.html
@@ -110,10 +110,6 @@ a.nav-link:hover .mbar{
         width: 560px;
         margin: auto;
       }
-      #imagesm{
-        display: block;
-        margin: auto;
-      }
     }
     @media only screen and (min-width: 768px){
       #boxy{
@@ -421,7 +417,7 @@ a.nav-link:hover .mbar{
                   </div>
                   <div class="row">
                     <div class="col-md-12 d-md-none">
-                      <img src="../images/falsesm.png" alt="false image" class="img-fluid" id="imagesm" width="460px" height="300px">
+                      <img src="../images/falsesm.png" alt="false image" class="img-fluid mx-auto d-block" id="imagesm" width="460px" height="300px">
                     </div>
                   </div>
                   <div class="row">
