--- a/links/about.html
+++ b/links/about.html
@@ -105,12 +105,6 @@ a.nav-link:hover .mbar{
      z-index: 2;
      position: relative;
     }
-    @media only screen and (min-width: 400px){
-      .shape{
-        width: 560px;
-        margin: auto;
-      }
-    }
     @media only screen and (min-width: 768px){
       #boxy{
         height: 340px;
@@ -416,12 +410,12 @@ a.nav-link:hover .mbar{
                   </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-12 d-md-none">
+                    <div class="col-12 d-md-none">
                       <img src="../images/falsesm.png" alt="false image" class="img-fluid mx-auto d-block" id="imagesm" width="460px" height="300px">
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-12 d-md-none">
+                    <div class="col-12 d-md-none">
                       <div id="accordion">
                         <div class="card">
                           <div class="card-header">
