Align about text center

--- a/links/about.html
+++ b/links/about.html
@@ -105,6 +105,9 @@ a.nav-link:hover .mbar{
      z-index: 2;
      position: relative;
     }
+    .abholder{
+      text-align: center;
+    }
     @media only screen and (min-width: 768px){
       #boxy{
         height: 340px;
@@ -119,7 +122,8 @@ a.nav-link:hover .mbar{
       position: relative;
       top: 25px;
       z-index: -2;
-    } #insta1{
+    }
+    #insta1{
       font-size: 30px;
     }
     #insta2{
@@ -148,6 +152,7 @@ a.nav-link:hover .mbar{
     }
     .abholder{
       margin-bottom: 16px;
+      text-align: left;
     }
     .infop::before{
     display:inline-block;
@@ -196,6 +201,7 @@ a.nav-link:hover .mbar{
       position: relative;
       top: 25px;
       z-index: -2;
+      text-align: left;
     }
     #insta1{
       font-size: 37px;
@@ -298,6 +304,7 @@ a.nav-link:hover .mbar{
       position: relative;
       top: 25px;
       z-index: -2;
+      text-align: left;
     }
     .infop::before{
     display:inline-block;
