--- a/links/about.html
+++ b/links/about.html
@@ -47,6 +47,33 @@ li{
 .abholder{
   color: #0b8de3;
 }
+#insta1{
+      font-size: 20px;
+    }
+    #insta2{
+      font-size: 22px;
+    }
+    #insta3{
+      font-size: 28px;
+    }
+    #insta4{
+      font-size: 28px;
+    }
+    #insta5{
+      font-size: 28px;
+    }
+    #insta6{
+      font-size: 28px;
+    }
+    #insta7{
+      font-size: 28px;
+    }
+    #insta8{
+      font-size: 20px;
+    }
+    #insta9{
+      font-size: 20px;
+    }
 @keyframes example {
   0%   {background-color: lightblue; width: 2.5%;}
   5%  {background-color: lightblue; width: 5%;}
@@ -381,7 +408,7 @@ a.nav-link:hover .mbar{
                   <div class="col-md-12">
                     <div class="abtext">
                       <div class="abholder">
-                        <span class="obj1" id="insta1">/</span><span class="obj1" id="insta2">/</span><span class="obj1" id="insta3">A</span><span id="insta4"class="obj1">B</span><span id="insta5" class="obj1">O</span><span id="insta6" class="obj1">U</span><span id="insta7" class="obj1">T</span><span id="insta8" class="obj1">M</span><span id="insta9" class="obj1">E</span>
+                        <span class="obj1" id="insta1">/</span><span class="obj1" id="insta2">/</span><span class="obj1" id="insta3">A</span><span id="insta4" class="obj1">B</span><span id="insta5" class="obj1">O</span><span id="insta6" class="obj1">U</span><span id="insta7" class="obj1">T</span><span id="insta8" class="obj1">M</span> <span id="insta9" class="obj1"> E</span>
                   </div>
                  </div>
                   </div>
