--- a/links/about.html
+++ b/links/about.html
@@ -439,7 +439,7 @@ a.nav-link:hover .mbar{
                   <div class="row">
                     <div class="col-12 d-md-none">
                       <div id="accordion">
-                        <div class="card">
+                        <div class="card bg-warning">
                           <div class="card-header">
                             <a class="card-link" data-toggle="collapse" href="#collapseOne">
                               Collapsible Group Item #1
@@ -451,7 +451,7 @@ a.nav-link:hover .mbar{
                             </div>
                           </div>
                         </div>
-                        <div class="card">
+                        <div class="card mt-2 bg-warning">
                           <div class="card-header">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
                             Collapsible Group Item #2
@@ -463,7 +463,7 @@ a.nav-link:hover .mbar{
                             </div>
                           </div>
                         </div>
-                        <div class="card">
+                        <div class="card mt-2 bg-warning">
                           <div class="card-header">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
                               Collapsible Group Item #3
