--- a/links/about.html
+++ b/links/about.html
@@ -446,7 +446,7 @@ a.nav-link:hover .mbar{
                             </a>
                           </div>
                           <div id="collapseOne" class="collapse show" data-parent="#accordion">
-                            <div class="card-body">
+                            <div class="card-body bg-white">
                               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </div>
                           </div>
@@ -458,7 +458,7 @@ a.nav-link:hover .mbar{
                           </a>
                           </div>
                           <div id="collapseTwo" class="collapse" data-parent="#accordion">
-                            <div class="card-body">
+                            <div class="card-body bg-white">
                               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </div>
                           </div>
@@ -470,7 +470,7 @@ a.nav-link:hover .mbar{
                             </a>
                           </div>
                           <div id="collapseThree" class="collapse" data-parent="#accordion">
-                            <div class="card-body">
+                            <div class="card-body bg-white">
                               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </div>
                           </div>
