--- a/links/about.html
+++ b/links/about.html
@@ -62,6 +62,9 @@ li{
     #insta9{
       font-size: 22px;
     }
+    #colcard{
+      background-color: #ffd662ff;
+    }
 @keyframes example {
   0%   {background-color: lightblue; width: 2.5%;}
   5%  {background-color: lightblue; width: 5%;}
@@ -439,7 +442,7 @@ a.nav-link:hover .mbar{
                   <div class="row">
                     <div class="col-12 d-md-none">
                       <div id="accordion">
-                        <div class="card bg-warning">
+                        <div class="card" id="colcard">
                           <div class="card-header">
                             <a class="card-link" data-toggle="collapse" href="#collapseOne">
                               Collapsible Group Item #1
@@ -451,7 +454,7 @@ a.nav-link:hover .mbar{
                             </div>
                           </div>
                         </div>
-                        <div class="card mt-1 bg-warning">
+                        <div class="card mt-1" id="colcard">
                           <div class="card-header">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
                             Collapsible Group Item #2
@@ -463,7 +466,7 @@ a.nav-link:hover .mbar{
                             </div>
                           </div>
                         </div>
-                        <div class="card mt-1 bg-warning">
+                        <div class="card mt-1" id="colcard">
                           <div class="card-header">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
                               Collapsible Group Item #3
