--- a/links/about.html
+++ b/links/about.html
@@ -444,8 +444,8 @@ a.nav-link:hover .mbar{
                       <div id="accordion">
                         <div class="card" id="colcard">
                           <div class="card-header">
-                            <a class="card-link" data-toggle="collapse" href="#collapseOne">
-                              Collapsible Group Item #1
+                            <a class="card-link text-center" data-toggle="collapse" href="#collapseOne">
+                              Life
                             </a>
                           </div>
                           <div id="collapseOne" class="collapse show" data-parent="#accordion">
@@ -456,8 +456,8 @@ a.nav-link:hover .mbar{
                         </div>
                         <div class="card mt-1" id="colcard">
                           <div class="card-header">
-                            <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
-                            Collapsible Group Item #2
+                            <a class="collapsed card-link text-center" data-toggle="collapse" href="#collapseTwo">
+                            Education
                           </a>
                           </div>
                           <div id="collapseTwo" class="collapse" data-parent="#accordion">
@@ -468,8 +468,8 @@ a.nav-link:hover .mbar{
                         </div>
                         <div class="card mt-1" id="colcard">
                           <div class="card-header">
-                            <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
-                              Collapsible Group Item #3
+                            <a class="collapsed card-link text-center" data-toggle="collapse" href="#collapseThree">
+                              Experience
                             </a>
                           </div>
                           <div id="collapseThree" class="collapse" data-parent="#accordion">
