--- a/links/about.html
+++ b/links/about.html
@@ -443,8 +443,8 @@ a.nav-link:hover .mbar{
                     <div class="col-12 d-md-none">
                       <div id="accordion">
                         <div class="card" id="colcard">
-                          <div class="card-header">
-                            <a class="card-link text-center" data-toggle="collapse" href="#collapseOne">
+                          <div class="card-header text-center">
+                            <a class="card-link" data-toggle="collapse" href="#collapseOne">
                               Life
                             </a>
                           </div>
@@ -456,7 +456,7 @@ a.nav-link:hover .mbar{
                         </div>
                         <div class="card mt-1" id="colcard">
                           <div class="card-header">
-                            <a class="collapsed card-link text-center" data-toggle="collapse" href="#collapseTwo">
+                            <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
                             Education
                           </a>
                           </div>
@@ -468,7 +468,7 @@ a.nav-link:hover .mbar{
                         </div>
                         <div class="card mt-1" id="colcard">
                           <div class="card-header">
-                            <a class="collapsed card-link text-center" data-toggle="collapse" href="#collapseThree">
+                            <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
                               Experience
                             </a>
                           </div>
