--- a/links/about.html
+++ b/links/about.html
@@ -64,6 +64,7 @@ li{
     }
     #colcard{
       background-color: #ffd662ff;
+      font-family: 'Varela Round', sans-serif;
     }
 @keyframes example {
   0%   {background-color: lightblue; width: 2.5%;}
@@ -455,7 +456,7 @@ a.nav-link:hover .mbar{
                           </div>
                         </div>
                         <div class="card mt-1" id="colcard">
-                          <div class="card-header">
+                          <div class="card-header text-center">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
                             Education
                           </a>
@@ -467,7 +468,7 @@ a.nav-link:hover .mbar{
                           </div>
                         </div>
                         <div class="card mt-1" id="colcard">
-                          <div class="card-header">
+                          <div class="card-header text-center">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
                               Experience
                             </a>
