--- a/links/about.html
+++ b/links/about.html
@@ -445,35 +445,35 @@ a.nav-link:hover .mbar{
                       <div id="accordion">
                         <div class="card" id="colcard">
                           <div class="card-header text-center">
-                            <a class="card-link" data-toggle="collapse" href="#collapseOne">
+                            <a class="card-link" data-toggle="collapse" href="#lifeone">
                               Life
                             </a>
                           </div>
-                          <div id="collapseOne" class="collapse show" data-parent="#accordion">
+                          <div id="lifeone" class="collapse show" data-parent="#accordion">
                             <div class="card-body bg-white">
-                              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                              Based in Western part of Africa, Ghana. A country filled with lots of goal-driven youth. I am motivated by the thought of solving the most challenging of problems and breaking them down into easy,readable and understandable syntax.<br><br>With all that said,I tend to make every code I write efficient,effective and reusable whether it being REACT,Node.js, Next.js or Python. But I guess when I am not behind the machine, you may find me taking a walk or playing football.
                             </div>
                           </div>
                         </div>
                         <div class="card mt-1" id="colcard">
                           <div class="card-header text-center">
-                            <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
+                            <a class="collapsed card-link" data-toggle="collapse" href="#educationtwo">
                             Education
                           </a>
                           </div>
-                          <div id="collapseTwo" class="collapse" data-parent="#accordion">
+                          <div id="educationtwo" class="collapse" data-parent="#accordion">
                             <div class="card-body bg-white">
-                              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                              Been self-taught mostly in this S.T.E.M field. I obtained my basic education certification in the year 2015.Later in 2018, I completed high school and earned my senior high certificate. Continued to the Tertiary stage and now pursuing a degree in the Bachelor of Arts -Information Studies and Psychology.
                             </div>
                           </div>
                         </div>
-                        <div class="card mt-1" id="colcard">
+                        <div class="card mt-1 mb-1" id="colcard">
                           <div class="card-header text-center">
-                            <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+                            <a class="collapsed card-link" data-toggle="collapse" href="#experiencethree">
                               Experience
                             </a>
                           </div>
-                          <div id="collapseThree" class="collapse" data-parent="#accordion">
+                          <div id="experiencethree" class="collapse" data-parent="#accordion">
                             <div class="card-body bg-white">
                               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </div>
