Changing the color of info box

--- a/links/about.html
+++ b/links/about.html
@@ -41,6 +41,9 @@ li{
   font-family: 'Varela Round', sans-serif;
   font-weight: bolder;
 }
+.infop{
+  background-color: white;
+}
 #txtlink{
   font-family: 'Varela Round', sans-serif;
 }
@@ -201,8 +204,6 @@ a.nav-link:hover .mbar{
       margin: auto;
       height: 320px;
       border-radius: 10px;
-      border-color:#ffd662ff ;
-      background-color: #ffd662ff;
       box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
     }
   }
@@ -277,8 +278,6 @@ a.nav-link:hover .mbar{
       margin: auto;
       height: 320px;
       border-radius: 10px;
-      border-color:#ffd662ff ;
-      background-color: #ffd662ff;
       box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
     }
   }
@@ -347,8 +346,6 @@ a.nav-link:hover .mbar{
       margin: auto;
       height: 340px;
       border-radius: 10px;
-      border-color:#ffd662ff ;
-      background-color: #ffd662ff;
       box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
     }
 #infotext{
