--- a/links/about.html
+++ b/links/about.html
@@ -325,15 +325,15 @@ a.nav-link:hover .mbar{
       text-align: left;
     }
     .infop::before{
-    display:inline-block;
-    height: 280px;
-    width:480px;
+    display:block;
+    height: 290px;
+    width:395px;
     content: "";
     background:url(../images/false.png) no-repeat 0 0;
-    background-size: 480px 280px;
+    background-size: 395px 290px;
     position: relative;
-    bottom: 140px;
-    right: 240px;
+    bottom: 145px;
+    right: 195px;
 }
 .info-con{
   width: 99%;
