--- a/links/about.html
+++ b/links/about.html
@@ -255,7 +255,7 @@ a.nav-link:hover .mbar{
     height: 240px;
     width:390px;
     content: "";
-    background:url(../images/false.png) no-repeat 0 0;
+    background:url(../images/Cartoon.jpg) no-repeat 0 0;
     background-size: 390px 240px;
     position: relative;
     bottom: 120px;
