--- a/links/about.html
+++ b/links/about.html
@@ -448,7 +448,7 @@ a.nav-link:hover .mbar{
                           </div>
                           <div id="lifeone" class="collapse show" data-parent="#accordion">
                             <div class="card-body bg-white">
-                              Based in Western part of Africa, Ghana. A country filled with lots of goal-driven youth. I am motivated by the thought of solving the most challenging of problems and breaking them down into easy,readable and understandable syntax.<br><br>With all that said,I tend to make every code I write efficient,effective and reusable whether it being REACT,Node.js, Next.js or Python. But I guess when I am not behind the machine, you may find me taking a walk or playing football.
+                              Based in Western part of Africa, Ghana. A country filled with lots of goal-driven youth. I am motivated by the thought of solving the most challenging of problems and breaking them down into easy,readable and understandable syntax.<br><br> continued to the tunnels of dangers and conqured With all that said,I tend to make every code I write efficient,effective and reusable whether it being REACT,Node.js, Next.js or Python. But I guess when I am not behind the machine, you may find me taking a walk or playing football.
                             </div>
                           </div>
                         </div>
