--- a/links/about.html
+++ b/links/about.html
@@ -329,7 +329,7 @@ a.nav-link:hover .mbar{
     height: 290px;
     width:395px;
     content: "";
-    background:url(../images/false.png) no-repeat 0 0;
+    background:url(../images/Cartoon.jpg) no-repeat 0 0;
     background-size: 395px 290px;
     position: relative;
     bottom: 145px;
